# elegant_cli

./: .gitignore  LICENSE  LLM_PROMPT.md  README.md  README_en.md  pyproject.toml
elegant_cli/: __init__.py
tests/: test_custom_types.py  test_elegant_cli.py  test_matrix.py  test_schema_and_help.py
