[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "elegant-cli"
version = "0.1.0"
description = "A configuration-driven semantic CLI engine."
authors = [{name = "Lexiang-Xiong", email = "bearxiong665@gmail.com"}]
license = {text = "MIT"}
requires-python = ">=3.7"